# Generated by Django 5.1.3 on 2024-12-04 05:00

from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ("main", "0016_alter_subject_created_date"),
    ]

    operations = [
        migrations.RemoveField(
            model_name="attendance_report",
            name="attendance_id",
        ),
        migrations.RemoveField(
            model_name="attendance_report",
            name="student_id",
        ),
        migrations.RemoveField(
            model_name="student_result",
            name="Subject_id",
        ),
        migrations.RemoveField(
            model_name="student_result",
            name="student_id",
        ),
        migrations.AddField(
            model_name="subject",
            name="subject_code",
            field=models.CharField(max_length=100, null=True, unique=True),
        ),
        migrations.DeleteModel(
            name="Attendance",
        ),
        migrations.DeleteModel(
            name="Attendance_report",
        ),
        migrations.DeleteModel(
            name="Student_result",
        ),
    ]
